# pivot-os

./: .clang-format  .gdbinit  .gitignore  .gitmodules  BOOTX64.efi  CMakeLists.txt  Cargo.toml  Makefile  README.md  bitmap-pseudocode.txt  bootstrap.yml  build.rs  build.zig  build.zig.zon  checklist.txt  create_disk.py  cross.txt  disk_layout.txt  diskmaker.sh.in  dmconfig  efi2img.sh  entry.c  grub.cfg  limine.cfg  limine.conf  linker.ld  log.txt  meson.build  meson_options.txt  multithreading.md  native.txt  os.img  setup.sh  startup.nsh  test.txt  test2.txt  x86_64.txt
.cargo/: config.toml
.git-old/: COMMIT_EDITMSG  HEAD  ORIG_HEAD  config  index  packed-refs
.git-old/logs/: HEAD
.github/workflows/: os-build.yaml  update-deps.yaml
asm/: intr.asm
boot/: boot.asm  multiboot_header.asm  multiboot_struc.inc
cpu/: idt.c  interrupts.asm
drivers/: Cargo.toml
drivers/src/: acpi.rs  lib.rs  qemu.rs  smp.rs  term.rs
fonts/: default.psf
glue/: buddy.c
include/: boot.h  kernel.h  kernel.hpp  sys.h
include/acpi/: madt.h
include/boot/: acpi.h  con.h  graphics.h  loader.h  mem.h  types.h  uefi.h
include/common/: boot.h  common.h
include/cpu/: cpu.h  cpu.hpp  gdt.h  gdt.hpp  idt.h  idt.hpp  ioapic.h  isr.hpp  lapic.h  mp.h  rtc.h  scheduler.h  smp.h  smp.hpp  tss.h  tss.hpp
include/drivers/: acpi.hpp  framebuffer.h  framebuffer.hpp  initrd.hpp  interrupts.hpp  ioapic.hpp  keyboard.h  keyboard.hpp  lapic.hpp  madt.hpp  pci.hpp  pic.hpp  pit.hpp  ps2.hpp  qemu.h  qemu.hpp  rtc.hpp  scheduler.hpp  syscall.hpp  term.hpp  tmpfs.hpp  ustar.hpp  (+1 more)
kernel/: Makefile  bootparam.h  kernel.c  main.c  mem.c  screen.c  string.c  string.h
mem/: Cargo.toml
mem/src/: heap.rs  lib.rs  mapper.rs  pmm.rs  vmm.rs
src/: ap.c  ap.cpp  asm.S  cpu.rs  gdt.rs  idt.rs  intr.asm  kernel.cpp  kernel.zig  limine.rs  linker.ld  logger.rs  lwip.h  main.rs  main.zig  meson.build  qemu.rs  serial.rs  ssfn.c  uacpi.h  writer.rs
src/asm/: boot.asm  interrupts.asm  loader.asm  scheduler.asm
src/bios/: CMakeLists.txt  boot1.asm  boot2.asm  boot2.c  bootloader.asm  common.asm  constants.asm  meson.build  screen.asm  screen16.asm  screen32.asm  util.asm  util16.asm  util32.asm
src/boot/: CMakeLists.txt  Makefile  acpi.c  boot.asm  con.c  graphics.c  loader.c  mem.c  multiboot_header.asm  uefi.c
src/common/: meson.build
src/common/io/: stdio.c
src/common/libc/: string.c
src/common/util/: logger.c
src/cpu/: ap_trampoline.asm  cpu.cpp  gdt.cpp  gdt.zig  idt.c  idt.cpp  idt.zig  index.zig  interrupts.asm  intr.asm  ioapic.c  isr.c  isr.cpp  lapic.c  lapic.zig  mem.c  mp.c  rtc.c  scheduler.c  scheduler.zig  smp.cpp  smp.zig  tss.c  tss.cpp
src/diskmaker/: CMakeLists.txt  diskmaker.cpp
src/drivers/: acpi.cpp  acpi.zig  cpu.zig  ec.zig  elf.zig  fb.zig  framebuffer.c  framebuffer.cpp  gdt.zig  ide.zig  idt.zig  index.zig  initrd.cpp  interrupts.cpp  ioapic.cpp  ioapic.zig  keyboard.c  keyboard.cpp  lapic.cpp  lapic.zig  lwip.zig  madt.cpp  modules.zig  pci.cpp  pci.zig  pic.cpp  pic.zig  pit.cpp  ps2.cpp  qemu.cpp  qemu.zig  rtc.cpp  rtl8139.zig  scheduler.cpp  serial.zig  smbios.zig  smp.zig  syscall.cpp  term.cpp  term.zig  (+6 more)
src/drivers/acpi/: index.zig  madt.zig
src/drivers/fs/: devtmpfs.cpp  tmpfs.cpp  vfs.cpp
src/drivers/intctrl/: index.zig  ioapic.zig  pic.zig
src/drivers/net/: rtl8139.zig  virtio-net.zig
src/drivers/pci/: ahci.zig  ide.zig  index.zig  msi.zig  msix.zig  pci.zig  pcie.zig  prt.zig
src/drivers/timers/: acpi.zig  hpet.zig  index.zig  lapic.zig  pit.zig  tsc.zig
src/include/: sys.h
src/include/cpu/: cpu.h  ioapic.h  lapic.h  mem.h  mp.h
src/include/drivers/: framebuffer.h  keyboard.h
src/include/io/: ports.h
src/include/kernel/: acpi.h  logging.h  multiboot.h
src/include/libc/: string.h
src/include/mem/: mem.h
src/intctrl/: ioapic.zig
src/io/: ports.c  serial.cpp  stdio.c  stdio.cpp
src/kernel/: CMakeLists.txt  Makefile  acpi.c  ap.c  init.cpp  kernel.c  kernel.cpp  linker.ld  logging.c  main.c  meson.build  trampoline.asm
src/kernel/acpi/: acpi.c  acpi.cpp  madt.c  madt.cpp
src/kernel/cpu/: ap_trampoline.asm  cpu.c  gdt.c  gdt.cpp  idt.c  idt.cpp  interrupts.asm  ioapic.c  ioapic.cpp  isr.c  isr.cpp  kernel_trampoline.asm  lapic.c  lapic.cpp  load_gdt.asm  scheduler.c  smp.c  smp.cpp  threading.asm  tss.c  tss.cpp
src/kernel/drivers/: acpi.cpp  framebuffer.c  framebuffer.cpp  ioapic.cpp  keyboard.c  keyboard.cpp  lapic.cpp  pit.cpp  ps2.cpp  qemu.c  qemu.cpp  rtc.cpp
src/kernel/io/: pit.cpp  ports.c  ports.cpp  serial.cpp  stdio.c  stdio.cpp
src/kernel/kernel/: acpi.c  logging.c  progress.c  rtc.c
src/kernel/libc/: string.c
src/kernel/mem/: bitmap.c  bitmap.cpp  heap.c  heap.cpp  kheap.c  mapper.cpp  pmm.c  pmm.cpp  vmm.c  vmm.cpp
src/kernel/misc/: cxxabi.cpp  mem.cpp
src/kernel/scheduler/: scheduler.c  task.c  thread.c
src/kernel/util/: logger.cpp  progress.c  rtc.c  string.cpp
src/lib/: Spinlock.zig  index.zig  interrupts.cpp  logger.cpp  logger.zig  modules.cpp  mutex.zig  proc.asm  proc.cpp  proc.zig  qemu.zig  scheduler.cpp  scheduler.zig  smp.zig  syscall.cpp  syscall.zig  syscalls.cpp  syscalls.zig  timer.cpp  uacpi.cpp
src/lib/mem/: index.zig  mapper.zig  pmm.zig  vmm.zig
src/libc/: string.c
src/llvm-uefi/: mem.c  uefi.c
src/lwip/: lwipopts.h  stdlib.h  string.h
src/lwip/arch/: cc.h  sys_arch.h
src/mem/: SLUB.zig  bitmap.c  bitmap.cpp  heap.cpp  index.zig  kheap.c  mapper.cpp  mapper.zig  mem.c  pmm.c  pmm.cpp  pmm.zig  vmm.cpp  vmm.zig
src/misc/: cxxabi.cpp  mem.cpp  strchr.cpp  string.cpp  ubsan.cpp
src/scheduler/: scheduler.c  thread.c
src/services/: cpu.zig  index.zig  logger.zig  mem.zig
src/timers/: acpi.zig  hpet.zig  index.zig  lapic.zig  pit.zig  tsc.zig
src/uefi/: CMakeLists.txt  acpi.c  con.c  graphics.c  loader.c  mem.c  meson.build  uefi.c
src/util/: logger.cpp
subprojects/: buddy.wrap  cwalk.wrap  fmt.wrap  frigg.wrap  limine-terminal.wrap  limine.wrap  uacpi.wrap
subprojects/packagefiles/limine/: meson.build
util/: Cargo.toml  compile_font.py  diskmaker.py
(+126 files in other folders)
