[package]
name = "pivot-os"
edition = "2021"

[dependencies]
pivot-drivers = { workspace = true }
pivot-mem = { workspace = true }
pivot-util = { workspace = true }
limine = "0.3.0"
log = "0.4.22"
x86_64 = { version = "0.15.1", default-features = false, features = ["instructions"] }
spin = { version = "0.9.8", default-features = false, features = ["lazy"] }

[workspace]
members = ["mem", "drivers", "util"]

[workspace.dependencies]
pivot-util = { path = "util" }
pivot-drivers = { path = "drivers" }
pivot-mem = { path = "mem" }

[build-dependencies]
cc = { version = "1.1.22", features = ["parallel"] }
nasm-rs = { version = "0.3.0", features = ["parallel"] }
