[package]
name = "pivot-drivers"
edition = "2021"
description = "Collection of drivers that PivotOS uses"

[dependencies]
limine = "0.3.1"
log = "0.4.22"
spin = { version = "0.9.8", default-features = false, features = ["lazy"] }
uart_16550 = "0.3.1"
x86_64 = { version = "0.15.1", default-features = false }
